@@ -20,15 +20,15 @@
   <properties>
     <java.version>23</java.version>
     <lombock.version>1.18.36</lombock.version>
-    <commons-io.version>2.15.1</commons-io.version>
-    <commons-lang.version>3.14.0</commons-lang.version>
-    <commons-text.version>1.11.0</commons-text.version>
+    <commons-io.version>2.17.0</commons-io.version>
+    <commons-lang.version>3.17.0</commons-lang.version>
+    <commons-text.version>1.12.0</commons-text.version>
     <org.slf4j.version>2.0.16</org.slf4j.version>
     <com.fasterxml.jackson.version>2.15.3</com.fasterxml.jackson.version>
-    <ch.qos.logback.version>1.4.14</ch.qos.logback.version>
-    <org.junit.jupiter.version>5.10.1</org.junit.jupiter.version>
-    <org.junit.platform.version>1.10.1</org.junit.platform.version>
-    <org.assertj.version>3.25.1</org.assertj.version>
+    <ch.qos.logback.version>1.5.12</ch.qos.logback.version>
+    <org.junit.jupiter.version>5.11.3</org.junit.jupiter.version>
+    <org.junit.platform.version>1.11.3</org.junit.platform.version>
+    <org.assertj.version>3.26.3</org.assertj.version>
     <snakeyaml-engine.version>2.7</snakeyaml-engine.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
@@ -138,6 +138,9 @@
               <artifactId>lombok</artifactId>
             </path>
           </annotationProcessorPaths>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -173,7 +176,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
-          <excludedGroups>integration-test-tag</excludedGroups>
+          <argLine>--enable-preview</argLine>
+          <excludedGroups>enable-preview</excludedGroups>
           <reportFormat>plain</reportFormat>
           <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
             <disable>false</disable>
